<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raileanu.drawingtool.MainMenuActivity"
    android:gravity="center"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <Button
            android:id="@+id/resumeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resume_b_name" />
        <Button
            android:id="@+id/newButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_b_name" />
        <Button
            android:id="@+id/manageColorsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_colors_b_name"/>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_b_name" />
        <Button
            android:id="@+id/loadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_b_name" />
        <Button
            android:id="@+id/importButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_b_name" />
        <Button
            android:id="@+id/exportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_b_name" />
        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_b_name" />

    </LinearLayout>

</RelativeLayout>
