<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raileanu.drawingtool.ManageColorsActivity"
    android:background="#ffffff"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/manageColorsButtonsLayout">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backBtnName"
            android:id="@+id/backButton"

             />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_color_btn_name"
            android:id="@+id/addColorButton"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_all_btn_name"
            android:id="@+id/clearAllButton"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/colorPickLayout">

        <include layout="@layout/fragment_colorpicker"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id= "@+id/confirmAddButton"
            android:text="@string/confirm_add_btn"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id= "@+id/cancelAddButton"
            android:text="@string/cancel_btn_name"/>
    </LinearLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/colorListView"

        />

</LinearLayout>
