<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#ffffff" >

        <Button
            android:id="@+id/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_b_name"
             />

        <Button
            android:id="@+id/pickColorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_btn_name"
            />

        <Button
            android:id="@+id/eraserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eraser_btn_name"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:background="#ffffff" >

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/colorButtonListView"
            android:orientation="horizontal"
            />

    </LinearLayout>
    <com.raileanu.drawingtool.TouchEventView
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="match_parent"
        android:id="@+id/drawingview">
    </com.raileanu.drawingtool.TouchEventView>
</LinearLayout>
